# python-arango

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  .travis.yml  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  MANIFEST.in  README.md  README.rst  conf.py  errors.py  index.rst  out.txt  pyproject.toml  pytest.ini  setup.cfg  setup.py  setup_arangodb_2.3.sh  setup_arangodb_2.4.sh  setup_arangodb_2.5.sh  setup_arangodb_2.6.sh  starter.sh  tester.sh
.circleci/: config.yml
.github/workflows/: build.yaml  codeql.yaml  docs.yaml  pypi.yaml
arango/: __init__.py  api.py  aql.py  arango.py  async.py  backup.py  batch.py  ca_certificate.py  client.py  cluster.py  collection.py  connection.py  constants.py  cursor.py  database.py  document.py  errno.py  exceptions.py  executor.py  formatter.py  foxx.py  graph.py  http.py  index.py  job.py  lock.py  method.py  pregel.py  query.py  replication.py  request.py  resolver.py  response.py  result.py  serializer.py  transaction.py  typings.py  util.py  utils.py  version.py  (+1 more)
arango/api/: __init__.py  wal.py
arango/aql/: __init__.py
arango/clients/: __init__.py  base.py  default.py  session.py
arango/collections/: __init__.py  base.py  edge.py  standard.py  vertex.py
arango/connections/: __init__.py  async.py  base.py  (+3 more)
arango_internals/: __init__.py  client.py  request.py  wal.py
docs/: Makefile  README.rst  admin.rst  analyzer.rst  aql.rst  arango.clients.rst  arango.rst  arango.tests.rst  async.rst  asyncio.rst  auth.rst  backup.rst  batch.rst  certificates.rst  classes.rst  client.rst  cluster.rst  collection.rst  compression.rst  conf.py  contributing.rst  cursor.rst  database.rst  document.rst  errno.rst  errors.rst  foxx.rst  graph.rst  http.rst  index.rst  indexes.rst  intro.rst  logging.rst  make.bat  modules.rst  overload.rst  overview.rst  pregel.rst  replication.rst  requirements.txt  (+10 more)
getting_started/: python-collections.md  python-databases.md  python-documents.md  python-getting-started.md  python.md
scripts/: setup_arangodb.sh  setup_arangodb_2.6.sh  setup_arangodb_mac.sh  setup_arangodb_travis.sh
tests/: conftest.py  executors.py  helpers.py  test_aiohttp_client.py  test_analyzer.py  test_aql.py  test_async.py  test_async_new.py  test_asyncio.py  test_auth.py  test_backup.py  test_batch.py  test_client.py  test_cluster.py  test_collection.py  test_cursor.py  test_database.py  test_document.py  test_edge.py  test_exception.py  test_foxx.py  test_graph.py  test_index.py  test_new_client_document.py  test_overload.py  test_permission.py  test_pregel.py  test_query.py  test_queue_bounded.py  test_replication.py  test_request.py  test_resolver.py  test_response.py  test_task.py  test_transaction.py  test_user.py  test_version.py  test_view.py  test_wal.py  utils.py
(+167 files in other folders)
