[build-system]
requires = ["setuptools>=42", "wheel", "setuptools_scm"]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]
normalize = true

[project]
name = "python-arango"
description = "Python Driver for ArangoDB"
authors = [ {name= "Joohwan Oh", email = "joohwan.oh@outlook.com" }]
maintainers = [
    {name = "Joohwan Oh", email = "joohwan.oh@outlook.com"},
    {name = "Alexandru Petenchea", email = "alex.petenchea@gmail.com"},
    {name = "Anthony Mahanna", email = "anthony.mahanna@arangodb.com"}
]
keywords = ["arangodb", "python", "driver"]
readme = "README.md"
dynamic = ["version"]
license = { file = "LICENSE" }
requires-python = ">=3.9"

classifiers = [
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Documentation :: Sphinx",
    "Typing :: Typed",
]

dependencies = [
    "urllib3>=1.26.0",
    "requests",
    "requests_toolbelt",
    "PyJWT",
    "setuptools>=42",
    "importlib_metadata>=4.7.1",
    "packaging>=23.1",
]

[project.optional-dependencies]
dev = [
    "black>=22.3.0",
    "flake8>=4.0.1",
    "isort>=5.10.1",
    "mypy>=0.942",
    "mock",
    "pre-commit>=2.17.0",
    "pytest>=7.1.1",
    "pytest-cov>=3.0.0",
    "sphinx",
    "sphinx_rtd_theme",
    "types-requests",
    "types-setuptools",
]

[tool.setuptools.package-data]
"arango" = ["py.typed"]

[project.urls]
homepage = "https://github.com/arangodb/python-arango"

[tool.setuptools]
packages = ["arango"]


[tool.pytest.ini_options]
addopts = "-s -vv -p no:warnings"
minversion = "6.0"
testpaths = ["tests"]

[tool.coverage.run]
omit = [
    "arango/version.py",
    "arango/formatter.py",
    "setup.py",
]

[tool.isort]
profile = "black"

[tool.mypy]
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
strict = true
